src/test/ui/associated-types/hr-associated-type-bound-param-6.stderr
error[E0277]: the trait bound `for<'b> T: X<'b, T>` is not satisfied
  --> $DIR/hr-associated-type-bound-param-6.rs:12:12
   |
LL | trait X<'a, T>
   |       - required by a bound in this
LL | where
LL |     for<'b> T: X<'b, T>,
   |                -------- required by this bound in `X`
...
LL | impl<S, T> X<'_, T> for (S,) {
   |            ^^^^^^^^ the trait `for<'b> X<'b, T>` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | impl<S, T: for<'b> X<'b, T>> X<'_, T> for (S,) {
   |          ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `T: X<'b, T>` is not satisfied
  --> $DIR/hr-associated-type-bound-param-6.rs:14:14
   |
LL | trait X<'a, T>
   |       - required by a bound in this
...
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `X<'b, T>` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | impl<S, T: X<'b, T>> X<'_, T> for (S,) {
   |          ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
